refact: atualizando arquivos js e css

--- a/src/css/abstracts/_reset.scss
+++ b/src/css/abstracts/_reset.scss
@@ -38,14 +38,26 @@ body {
     text-transform: none;
 }
 
+h1, h2, h3, h4, h5, h6, p, span, small, address {
+    overflow-wrap: break-word; // Para que o texto quebre...
+    hyphens: auto; // Adiciona hífen...
+}
+
 h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+
     font-family: font.$ff-highlight;
-    font-weight: font.$fw-bold;
-    color: color.$color-primary;
+    font-weight: font.$fw-extra-bold;
+    color: color.$color-secondary;
+    line-height: calc(1em + 1rem);
 }
 
 h4, h5, h6 {
     color: color.$color-white;
+}
+
+h1 {
+    font-size: calc(1.375rem + 1.5vw);
 }
 
 a {
